# tstore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  Snakefile  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  performance.md
.github/workflows/: ci.yaml  lint.yaml
ci/: environment.yml  environment_latest.yml
docs/: README.md  environment.yaml
docs/source/: 00_introduction.rst  01_key_concepts.rst  02_installation.rst  03_quickstart.rst  03_tutorials.rst  04_tutorials.rst  07_maintainers_guidelines.rst  conf.py  index.rst
tstore/: __init__.py  _version.py  backend.py  conftest.py  ts_class.py
tstore/archive/: __init__,py  __init__.py  checks.py  io.py  partitions.py  readers.py  ts.py  writers.py
tstore/archive/attributes/: __init__.py  dask.py  geopandas.py  pandas.py  polars.py  pyarrow.py
tstore/archive/metadata/: readers.py  writers.py
tstore/archive/ts/: __init__.py  dask.py  filtering.py  partitioning.py  pyarrow.py  utility.py
tstore/archive/ts/readers/: dask.py  polars.py  pyarrow.py
tstore/archive/ts/writers/: pyarrow.py
tstore/tests/: conftest.py  test_backend.py  test_dummy.py  test_ts.py  test_tsdf.py  test_tslong.py
tstore/tsdf/: __init__.py  dask.py  geopandas.py  pandas.py  polars.py  pyarrow.py  reader.py  ts_class.py  ts_dtype.py  tsarray.py  tsdf.py  writer.py
tstore/tsdf/extensions/: __init__.py  array.py  ts_dtype.py
tstore/tsdt/: __init__.py
tstore/tslong/: __init__.py  dask.py  lance.py  pandas.py  polars.py  pyarrow.py  tslong.py
tstore/tswide/: __init__.py  dask.py  pandas.py  polars.py  pyarrow.py  tswide.py
tstore/tswrapper/: tswrapper.py
tutorials/: 00-key-concepts.ipynb  00_example_pandas.py  00_example_ts.py  01-your-first-tstore.ipynb  01_example_ts.py  01_example_tsdf.py  02-benchmark.ipynb  02_example_tsdf.py  02_example_tslong.py  example_gpkg_agrometeo.py  example_ts.py  example_tsdf.py
