[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm",
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "gionata.ghiggi@epfl.ch", name = "Gionata Ghiggi" },
    { email = "marti.bosch@protonmail.com", name = "Martí Bosch" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dask",
    "distributed",
    "geopandas",
    "numpy >= 1.26.4, < 2",
    "pandas",
    "polars",
    "pyarrow",
    "pyyaml",
]
description = "Flexible storage for time series."
dynamic = [
    "version",
]
keywords = [
    "database",
    "parquet",
    "python",
    "storage",
    "time series",
]
name = "ts-store"
readme = "README.md"
requires-python = ">=3.9"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "build",
    "jupyter",
    "loghub",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "setuptools",
    "shapely",
    "twine",
]

[project.urls]
Repository = "https://github.com/ltelab/tstore"
changelog = "https://github.com/ltelab/tstore/blob/main/CHANGELOG.md"
documentation = "https://tstore.readthedocs.io"
homepage = "https://github.com/ltelab/tstore"
repository = "https://github.com/ltelab/tstore"
source = "https://github.com/ltelab/tstore"
tracker = "https://github.com/ltelab/tstore/issues"

[tool.codespell]
ignore-words-list = "nd,mis"

[tool.nbqa.addopts]
ruff = [
    "--ignore=D,I001",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "data",
    "dist",
    "docs",
    "node_modules",
    "venv",
]
extend-include = [
    "*.ipynb",
]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = [
    "B904",
    "D107",
    "D203",
    "D213",
    "D401",
    "D404",
    "E722",
    "PD011",
    "PD013",
    "PD901",
    "PERF203",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "PT011",
    "RET504",
]
select = [
    "ARG",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "PD",
    "PERF",
    "PL",
    "PT",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "UP",
    "W",
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",
]
"*__init__.py" = [
    "D104",
]
"setup.py" = [
    "D100",
]
"test_*.py" = [
    "ARG",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]
"tutorials/*.py" = [
    "B018",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
license-files = [
    "LICENSE",
]

[tool.setuptools.packages.find]
include = [
    "tstore*",
]

[tool.setuptools_scm]
write_to = "tstore/_version.py"
